Fix darkmode flicker when loading

--- a/components/ThemeChanger/styles.module.scss
+++ b/components/ThemeChanger/styles.module.scss
@@ -1,7 +1,5 @@
 .button {
-  position: fixed;
-  top: 15px;
-  right: 15px;
+  position: relative;
   width: 2.5rem;
   height: 1rem;
   &::after {
